$Id$
V3.92
2005/08/24  Image primitives:
            bsc4.f with GF_DEFIMAGE,GF_UNDEFIMAGE,GF_PUTIMAGE added
            imagetest.f added
            GU_XFLASH added

V3.91
2005/06/30  TICKS_PER_SECOND instead of CLK_TCK in unixc.c 

V3.90
2005/05/27  CLOCKS_PER_SEC instead of CLK_TCK in unixc.c 
            macosx-xlf/Makefile.arch now uses gcc rather than xlc
            macosx-XXX/Makefile.arch: select gcc-3.3 for MacOSX 10.4.X

V3.89
2005/03/02  lib/Makefile corrected (three objs without pic option)
            arch/hp-nifs added

V3.88
2004/12/18  The change of functions, SETLIN and SETRGB, removed

2004/12/17  Error of color at font-change in TEXT corrected 
                                                 (thanks to Mr. Akutsu)
            Slight change of functions, SETLIN and SETRGB
            GSOPENRANK and SETQUITCALLBACK added for MPI

2004/12/10  arch/itbl added

V3.87
2004/12/02  arch/freebsd/Makefile.arch added (by Mr. G. Kawamura)
            arch/macosx-xlf/Makefile.arch updated
            gdp.c, gps.c, gdum.c gsview.f unix.c updated (by Mr. G. Kawamura)

V3.86
2004/10/28  EPSF message in gps.c deleted for gstops
            Function type specified in gdp.c gps.c unixc.c

V3.85
2004/09/04  COMMON inconsistency in Apersen3d.f and pers.f corrected

2004/08/19  Evaluation of string width updated

V3.84
2004/08/18  SETPAGE correction for GTEXT and A3D*
	    Errorbar plot GPLOTE added (see gsaf.doc.new)

V3.83
2004/08/14  SETPAGE correction
            Original definition of charcter tilt reproduced
            Character position of stroke font adjusted

2004/08/13  SETPAGE rewritten to remove bug (thanks to Mr. T. Akutsu)
            Definition of charcter tilt changed

V3.82
2004/06/18  Makefile.dynamic corrected
            arch/opteron-pgf/Makefile.arch added

V3.81
2004/06/02  INQ_GDEFIN renamed to INQGDEFINE

V3.80
2004/05/05  SET_PAGE, INQ_PAGE renamed to SETPAGE, INQPAGE
            SETPAGE initializes object attributes
