@@ -2,7 +2,8 @@ C     $Id$
 C
 C     ****** GSFILE OUTPUT DRIVER ******
 C
-      DIMENSION NPAGEA(256)
+      PARAMETER  (NPAGEMAX=1024)
+      DIMENSION NPAGEA(NPAGEMAX)
       DIMENSION IPARM(256)
       CHARACTER KPARM*256,FLNAME*256
 C
@@ -29,7 +30,7 @@ C
   101       CONTINUE
          ENDIF
       ELSE
-         CALL GSLIST(NF,NPAGEA,256,NP)
+         CALL GSLIST(NF,NPAGEA,NPAGEMAX,NP)
          IF(NP.LE.10) THEN
             WRITE(6,601) (NPAGEA(N),N=1,NP)
          ELSE
