@@ -4,10 +4,13 @@ include ../Makefile.arch
 
 default : demo
 
-demo : plasma
+demo : plasma plasmax
 
 plasma : plasma.o
 	$(FC) $(FFLAGS) -o plasma plasma.o $(GDPLIBS) 
+
+plasmax : plasmax.o
+	$(FC) $(FFLAGS) -o plasmax plasmax.o $(GDPLIBS) 
 
 clean :
 	rm -f *.o ./*~ ./#*# core*
@@ -16,3 +19,4 @@ veryclean : clean
 	rm -f *test
 
 plasma.o: plasma.f plasma.inc
+plasmax.o: plasmax.f plasma.inc
