@@ -1,4 +1,7 @@
 $Id$
+2005/09/22  DVINQRES added
+            demo/plasma.f, plasmax.f added
+
 V3.92
 2005/08/24  Image primitives:
             bsc4.f with GF_DEFIMAGE,GF_UNDEFIMAGE,GF_PUTIMAGE added
